--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage":"https://lotwd.github.io/react-diagonal-container-demo",
   "name": "react-diagonal-container",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
